--- a/templates/items/gm_tracker-sheet.hbs
+++ b/templates/items/gm_tracker-sheet.hbs
@@ -1,6 +1,6 @@
 <form class="{{cssClass}} tracker-sheet" autocomplete="off">
 
-  <img class="sheet-img" src="{{item.img}}" data-edit="img" />
+  <img class="sheet-img" src="{{item.img}}" />
   {{log "Tracker Sheet" this}}
 
   {{!-- Sheet Container --}}
