--- a/templates/overlays/clock-overlay.hbs
+++ b/templates/overlays/clock-overlay.hbs
@@ -38,6 +38,8 @@
   </defs>
 </svg>
 
+{{log "CLOCK OVERLAY" this}}
+
 {{#each clock_keys}}
   {{#if (eq ../currentScene scene)}}
     {{> "systems/eunos-blades/templates/overlays/clock-key.hbs" this keyNum=@index}}
