--- a/scss/sheets/_clock-keeper-sheet.scss
+++ b/scss/sheets/_clock-keeper-sheet.scss
@@ -1,92 +1,126 @@
 & {
-  .scene-selection {
-    label {
-      font-family: var(--font-emphasis);
-    }
+  min-width: 700px !important;
 
-    position: absolute;
-    top: 12px;
-    right: 0;
 
-    select {
-      font-family: var(--font-emphasis);
-      color: var(--blades-white-bright);
-      background: var(--blades-black-dark);
-      border: none;
-      width: 200px;
-    }
-  }
+  .window-content {
+    max-height: 100%;
 
-  table {
-    margin: 0;
+    form {
 
-    .check-label {
-      font-size: 10px;
-      margin: 0;
-      padding: 0;
-      background: none !important;
-      text-transform: uppercase;
-      transform: rotate(-45deg) scale(0.9);
-      display: inline-block;
-      text-align: center;
-      line-height: 9px;
-      height: 100%;
-      min-height: 100%;
-      vertical-align: middle;
-      margin-top: -5px;
+      .sheet-root {
+        overflow-y: scroll;
+        max-height: 100%;
 
-    }
+        .sheet-top {
+          .sheet-title {
+            width: 50%;
+          }
+        }
 
-    thead {
-      th.black-white {
-        background: var(--blades-white-bright) !important;
-      }
-    }
-    th,
-    td {
-      text-align: left;
-      color: var(--blades-white);
+        .scene-selection {
+          label {
+            font-family: var(--font-emphasis);
+          }
 
-      p {
-        margin: 0
-      }
+          position: absolute;
+          top: 12px;
+          right: 0;
+          left: unset;
 
-      &:nth-child(1) {
-        width: 64px;
-        white-space: nowrap;
-      }
+          select {
+            font-family: var(--font-emphasis);
+            color: var(--blades-white-bright);
+            background: var(--blades-black-dark);
+            border: none;
+            width: 200px;
+          }
+        }
 
-      &:nth-child(2) {
-        width: 60%
-      }
+        table {
+          margin: 0;
 
-      &:nth-child(3),
-      &:nth-child(4) {
-        text-align: center;
-      }
-    }
+          .check-label {
+            font-size: 10px;
+            margin: 0;
+            padding: 0;
+            background: none !important;
+            text-transform: uppercase;
+            transform: rotate(-45deg) scale(0.9);
+            display: inline-block;
+            text-align: center;
+            line-height: 9px;
+            height: 100%;
+            min-height: 100%;
+            vertical-align: middle;
+            margin-top: -5px;
 
-    th {
-      input {
-        color: var(--blades-black);
-      }
+          }
 
-      select {
-        color: var(--blades-black);
-        text-align: center;
-      }
-    }
+          thead {
+            th.black-white {
+              background: var(--blades-white-bright) !important;
+              color: var(--blades-black-dark);
+            }
+          }
+          th,
+          td {
+            text-align: left;
+            color: var(--blades-white);
+            position: relative;
 
-    td {
-      select[data-dtype="number"] {
-        vertical-align: top;
+            .toggle-icon, .button-icon { position: relative; }
 
-        &[data-dtype="number"] {
-          font-family: var(--font-emphasis);
-          font-size: 18px;
-          color: var(--blades-white-bright);
+            p {
+              margin: 0
+            }
+
+            &:nth-child(1) {
+              width: 64px;
+              white-space: nowrap;
+            }
+
+            &:nth-child(2) {
+              width: 60%
+            }
+
+            &:nth-child(3),
+            &:nth-child(4) {
+              text-align: center;
+            }
+          }
+
+          th {
+            background: var(--blades-grey);
+            input {
+              color: var(--blades-black-dark);
+              font-family: var(--font-emphasis);
+            }
+
+            // select {
+            //   color: var(--blades-black);
+            //   text-align: center;
+            //   min-width: 40px;
+            // }
+          }
+
+          td, th {
+            select[data-dtype="number"] {
+              vertical-align: top;
+              font-family: var(--font-emphasis);
+              font-size: 18px;
+              color: var(--blades-white-bright);
+              min-width: 60px;
+            }
+          }
+
+          th select[data-dtype="number"] {
+            color: var(--blades-black-dark);
+          }
         }
       }
+
     }
   }
+
+
 }
