--- a/scss/sheets/_faction-sheet.scss
+++ b/scss/sheets/_faction-sheet.scss
@@ -25,8 +25,100 @@
               grid-area: tier;
             }
           }
+
+          &.tab-content {
+            .tab.clocks {
+              .comp.tab-label { margin: 0 }
+              .clock-row {
+                height: 100px;
+                width: 100%;
+                overflow: hidden;
+                margin: 0px;
+                display: flex;
+                flex-direction: row;
+                align-items: stretch;
+                position: relative;
+                &:not(:first-of-type) {
+                  border-top: 2px solid var(--blades-white-bright);
+                }
+
+                .clock-container { height: 100px; width: 100px; pointer-events: all }
+
+                  > .flex-vertical.full-width {
+                    order: 2;
+                    justify-content: stretch;
+
+                    > .flex-horizontal.full-width {
+                      justify-content: flex-start;
+
+                      .clock-label {
+                        flex-grow: 2;
+                        font-family: var(--font-emphasis);
+                        font-size: toRem(18px);
+                        color: var(--blades-white-bright);
+                        text-align: left;
+                        pointer-events: all
+                      }
+
+                      .clock-size-input {
+                        flex-grow: 0;
+                        width: 80px;
+                        margin: 0 10px;
+                        font-family: var(--font-emphasis);
+                        font-size: toRem(18px);
+                        color: var(--blades-white-bright);
+                        text-align: center;
+                        background: rgba(0, 0, 0, 0.25);
+                        box-shadow:
+                          inset 0 0 5px var(--blades-black-dark),
+                          inset 0 0 5px var(--blades-black-dark);
+                        pointer-events: all
+                      }
+                      .clock-color-input {
+                        flex-grow: 0;
+                        width: 120px;
+                        margin: 0;
+                        font-family: var(--font-emphasis);
+                        font-size: toRem(18px);
+                        color: var(--blades-white-bright);
+                        text-align: left;
+                        background: rgba(0, 0, 0, 0.25);
+                        box-shadow:
+                          inset 0 0 5px var(--blades-black-dark),
+                          inset 0 0 5px var(--blades-black-dark);
+                        pointer-events: all
+                      }
+
+                    }
+
+                    .clock-gm-notes { flex-grow: 5; resize: none; pointer-events: all }
+
+                  }
+
+                  .clock, .clock * {
+                    pointer-events: none
+                    // order: 1;
+                    // position: relative;
+                    // left: -45px;
+                    // top: 50px;
+                    // flex-basis: 80px;
+                    // margin-right: -150px;
+
+                  }
+
+                  &, * {
+                  --clock-frame-size: 80px;
+                  --clock-glow-size: calc(var(--clock-frame-size) * 3);
+                  --clock-glow-correction: -80px;
+                  }
+
+                  // .clock { position: absolute }
+                  .clock-glow { display: none }
+                }
+              }
+            }
+          }
         }
       }
     }
   }
-}
