--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -170,7 +170,7 @@
                 display: flex;
                 justify-content: stretch;
                 height: 100%;
-                overflow: visible;
+                // overflow: visible;
                 overflow-y: scroll;
                 min-height: var(--min-tinymce-height);
               }
