--- a/templates/faction-sheet.hbs
+++ b/templates/faction-sheet.hbs
@@ -25,7 +25,7 @@
     <section class="sheet-top">
       <input class="sheet-title shadowed" type="text" name="name" value="{{actor.name}}">
 
-      {{> "systems/eunos-blades/templates/components/comp.hbs" tierData}}
+      {{> "systems/eunos-blades/templates/parts/tier-block.hbs" }}
 
       <input class="sheet-subtitle shadowed" type="text" name="system.subtitle" value="{{system.subtitle}}"
         placeholder="Overview">
