--- a/scss/core/_globals.scss
+++ b/scss/core/_globals.scss
@@ -99,6 +99,13 @@
     width: min-content;
     white-space: nowrap;
     // left: -2px;
+
+    &.narrow-label {
+      transform-origin: 0 50%;
+      scale: 0.8 1;
+      min-width: 125%;
+      margin-left: 25%;
+    }
   }
 
   .number-circle {
