--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -78,6 +78,7 @@
 
       .sheet-root {
         position: relative;
+        z-index: 0;
         height: 100%;
         width: 100%;
         // top: -10px;
