--- a/templates/items/gear-sheet.hbs
+++ b/templates/items/gear-sheet.hbs
@@ -12,7 +12,7 @@
     <section class="sheet-top">
       <img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
       <input class="sheet-title shadowed" type="text" name="name" value="{{item.name}}">
-      {{> "systems/eunos-blades/templates/components/comp.hbs" tierData}}
+      {{> "systems/eunos-blades/templates/parts/tier-block.hbs" }}
     </section>
 
     {{!-- Body --}}
